# openai-proxy-monitor

./: .env  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dev.md  http_proxy.rs  openai_stream.py  test.py  test2.py  tools_stream.py
src/: http_proxy.rs  main.rs  rate_limiter.rs  utils.rs
src/http_proxy/: code_body.rs  config.rs  metrics.rs  mod.rs  parsing.rs  proxy.rs  types.rs
