[package]
name = "openai-proxy-monitor"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
async-trait = "0.1.88"
pingora = { version = "0.5.0", features = ["rustls", "proxy"] }
pingora-error = "0.5.0"
bytes = "1.10.1"
pingora-http = "0.5.0"
anyhow = "1.0.98"
prometheus = "0.14.0"
pingora-core = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# serde_yaml = "0.9.34-deprecated"
tiktoken-rs = "0.7.0"
env_logger = "0.11.8"
http = "1.3.1"
log = "0.4.27"
clap = { version = "4.5.40", features = ["derive", "env"] }
# redis = { version = "0.32.2", features = ["async-std-comp"] }
time = "0.3.41"
rand = "0.9.1"
# deadpool = {version = "0.12.2", features = ["rt_async-std_1"]}

[dev-dependencies]
matchers = "0.2.0"
reqwest = "0.12.20"
tokio = "1.45.1"
httpmock = "0.7.0"
testcontainers = "0.24.0"
mockall = "0.13.1"
